--- a/gradle.properties
+++ b/gradle.properties
@@ -2,9 +2,9 @@
 org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
-	minecraft_version=1.18
-	yarn_mappings=1.18+build.1
-	loader_version=0.12.5
+	minecraft_version=1.18.2
+	yarn_mappings=1.18.2+build.1
+	loader_version=0.13.3
 
 # Mod Properties
 	mod_version = 2.2.2
@@ -13,9 +13,9 @@ org.gradle.jvmargs=-Xmx1G
 
 # Dependencies
 	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-	fabric_version=0.43.1+1.18
-	cca_version=4.0.0-alpha.1+21w37a
-	pal_version=1.3.0
+	fabric_version=0.47.8+1.18.2
+	cca_version=4.0.1
+	pal_version=1.5.0
 	calio_version=v1.4.2
-	clothconfig_version=6.0.42
+	clothconfig_version=6.2.57
 	modmenu_version=3.0.0
